--- a/day04/ex02/templates/nav2.html
+++ b/day04/ex02/templates/nav2.html
@@ -1,7 +1,7 @@
 
 <div>
   <ul>
-    <li><a href="http://localhost:8000/ex02/Input">Input Something</a></li>
-    <li><a href="http://localhost:8000/ex02/Logs">Logs</a></li>
+    <li><a href="http://localhost:8000/ex02/input">Input Something</a></li>
+    <li><a href="http://localhost:8000/ex02/Log">Logs</a></li>
   </ul>
 </div>
