--- a/day04/ex01/templates/02_display.html
+++ b/day04/ex01/templates/02_display.html
@@ -1,4 +1,4 @@
-{% extends './base.html' %}
+{% extends './base1.html' %}
 {% load static %}
 {% block title %}
     Ex01: Display process of a static page.
