--- a/day04/ex02_reference/templates/input.html
+++ b/day04/ex02_reference/templates/input.html
@@ -10,7 +10,7 @@
 
 {% block content %}
 	<body>
-    <form action="thanks" method="post">
+    <form action="thanks/" method="post">
       {% csrf_token %}
       {{ form }}
       <input type="submit" value="submit"/>
