--- a/day04/ex02_reference/templates/thanks.html
+++ b/day04/ex02_reference/templates/thanks.html
@@ -1,7 +1,7 @@
 {% extends './base2.html' %}
 {% load static %}
 {% block title %}
-    Input | by spark
+    Thanks! | by spark
 {% endblock %}
 
 {% block style %}
@@ -9,11 +9,6 @@
 {% endblock %}
 
 {% block content %}
-	<body>
-    <form action="thanks" method="post">
-      {% csrf_token %}
-      {{ form }}
-      <input type="submit" value="submit"/>
-    </form> 
-  </body>
+  <h1>thanks to you!</h1>
+  <h1> {{form}} </h1>
 {% endblock %}
