--- a/day04/ex02/templates/log.html
+++ b/day04/ex02/templates/log.html
@@ -9,5 +9,9 @@
 {% endblock %}
 
 {% block content %}
-  {{log}}
+  {% for i in log %}
+    <p>{{i}}<p>
+  {% endfor %}
 {% endblock %}
+
+{% comment %} <log 안에 연결된 건 리스트! 리스트 안에 리스트를 어떻게 for로 돌릴까??> {% endcomment %}
