--- a/day04/ex02/templates/log.html
+++ b/day04/ex02/templates/log.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block content %}
-  {% for i in log %}
+  {% for i in log reversed %}
     <p>{{i}}<p>
   {% endfor %}
 {% endblock %}
