--- a/day04/ex02/static/style.css
+++ b/day04/ex02/static/style.css
@@ -72,7 +72,7 @@
   line-height: inherit;
 }
 .fa-border {
-  border: 0.08em solid #eee;
+  border: 0.08em solid rgb(238, 238, 238);
   border-radius: 0.1em;
   padding: 0.2em 0.25em 0.15em;
 }
