--- a/day04/ex01/templates/03_temp_engine.html
+++ b/day04/ex01/templates/03_temp_engine.html
@@ -10,107 +10,96 @@
 
 {% block content %}
 {% verbatim  %}
-<section class="post-content">
-  
-    <p align="center">
-    Jinja는 flask가 기본적으로 지원하는 템플릿엔진이다.
-</p>
-<p><br></p>
+<div class="sc-elJkPf kjoEwH"><div class="sc-btzYZH jyGcTL"><div class="sc-lhVmIH fOirdn atom-one-light"><p>Django의 <code>템플릿 언어</code>(template language)는 강력함과 편리함 사이의 균형을 잡고자 설계되었다. 템플릿 언어를 사용하면 HTML 작업을 훨씬 수월하게 할 수 있다.</p>
+<p><code>변수</code>, <code>필터</code>, <code>태그</code>, <code>주석</code> 등 4가지 기능을 제공한다.</p>
+<pre class=" language-django"><code class=" language-django">{% extends "base_generic.html" %}
 
-<h1 id="jinja--flask-기본-템플릿-엔진-">Jinja ( Flask 기본 템플릿 엔진 )</h1>
-<p>html코드 내에서 파이썬 백엔드에서 보내는 정보의 출력이나, html코드의 동적 제어등을 위해 사용하는 플라스크 기본 템플릿엔진이다.
-<br></p>
+{% block title %}{{ section.title }}{% endblock %}
 
+{% block content %}
+&lt;h1&gt;{{ section.title }}&lt;/h1&gt;
+
+{% for story in story_list %}
+&lt;h2&gt;
+  &lt;a href="{{ story.get_absolute_url }}"&gt;
+    {{ story.headline|upper }}
+  &lt;/a&gt;
+&lt;/h2&gt;
+&lt;p&gt;{{ story.tease|truncatewords:"100" }}&lt;/p&gt;
+{% endfor %}
+{% endblock %}</code></pre>
+<p>장고 공식 문서에 나와있는 예제를 보면서 각 기능들을 공부해보자.</p>
+<h2 id="1-템플릿-변수">1. 템플릿 변수</h2>
+<p>템플릿변수를 사용하면 <strong>뷰에서 템플릿으로 객체를 전달</strong>할 수 있다. </p>
 <ul>
-  <li>
-    <font color="orange">{# ... #}</font>
-    <p>:  주석 정의
-<br><br></p>
-  </li>
+<li><code>{{ 변수 }}</code>와 같이 생겼다. </li>
+<li><code>점(.)</code> 은 변수의 속성에 접근할 때 사용한다.</li>
 </ul>
-
-<h1 id="-변수-">{{ 변수 }}</h1>
-<p>변수나 표현식의 결과를 출력하는 구분자<br>
-<br></p>
-
-<p>ex ) test.py</p>
-
-<figure class="highlight"><pre><code class="language-ruby" data-lang="ruby"><span class="k">return</span> <span class="n">render_template</span><span class="p">(</span><span class="s1">'test.html'</span><span class="p">,</span> <span class="n">msg</span><span class="o">=</span><span class="n">msg</span><span class="p">)</span></code></pre></figure>
-
-<p>ex ) test.html</p>
-
-<figure class="highlight"><pre><code class="language-ruby" data-lang="ruby"><span class="p"></span></code></pre></figure>
-
+<p>위의 예제에서는 <code>{{ section.title}}</code> 와 같이 사용했다. 뷰에서 <code>section</code>객체를 html 문서로 보내 <code>title</code> 속성을 출력할 수 있도록 지원하는 것이다.</p>
+<h2 id="2-템플릿-필터">2. 템플릿 필터</h2>
+<p>템플릿필터는 <strong>변수의 값을 특정 형식으로 변환</strong>할 때 사용한다. 변수 다음에 <code>파이프(|)</code>를 넣은 다음 적용하고자 하는 필터를 명시한다. </p>
 <ul>
-  <li>
-    <p>위와 같이 html파일로 데이터를 보내기 위해서는 <font color="orange">render_template()</font>함수를 이용하여 html파일을 출력할 때, <font color="orange">두번째 인자</font>로 데이터를 보내면 <font color="orange">중괄호 2개( { { } } )를 이용</font>하여 해당 데이터를 출력할 수 있다.
-<br><br></p>
-  </li>
-  <li>
-    <p>데이터는 하나뿐만 아니라, <font color="orange">콤마(,)를 구분자로 여러개를 보낼수도 있다.</font></p>
-  </li>
+<li>
+<p><strong>여러 개의 필터를 연속적으로 사용할 수 있다.</strong> </p>
+<p><code>{{ text|escape|linebreaks }}</code>는 텍스트 컨텐츠를 이스케이프한 다음, 행 바꿈을 <code>&lt;p&gt;</code> 태그로 바꾸기 위해 종종 사용되곤 한다.</p>
+</li>
+<li>
+<p><strong>몇몇 필터는 <code>:</code> 문자를 통해 인자를 취한다.</strong> </p>
+<p>필터 인자는 <code>{{bio|truncatewords:30 }}</code>과 같이 사용하는데, 이것은 <code>bio</code> 변수의 처음 30 단어를 보여준다.</p>
+<p>필터 인자에 공백이 포함된 경우에는 반드시 따옴표로 둘러싸야한다.</p>
+</li>
+<li>
+<p>템플릿 필터를 직접 만들 수도 있다.  <a href="https://django-doc-test-kor.readthedocs.io/en/old_master/howto/custom-template-tags.html">Custom template tags and filters</a> 참고</p>
+</li>
 </ul>
-
-<p><br><br></p>
-
-<h1 id="--">{% … %}</h1>
-<p>if문,for문 등의 흐름 제어문을 할당하는 구분자
-<br><br></p>
-
-<h2 id="for문-사용">for문 사용</h2>
-<p>for반복문을 사용하기 위해서는 ‘<font color="orange">{% for 개별요소 in 열거형데이터 %}</font>‘의 문법을 시작으로, 반복문이 끝나는 지점에 반드시 ‘<font color="orange">{% endfor %}</font>‘를 붙여주어야 한다.
-<br></p>
-
-<p><br><br></p>
-
-<h2 id="if문">if문</h2>
-<p>Jinja템플릿의 if는 <font color="orange">if</font>, <font color="orange">elif</font>, <font color="orange">else</font> 세가지 키워드로 구성할 수 있다.
-<br></p>
-
-<figure class="highlight"><pre><code class="language-ruby" data-lang="ruby"><span class="p">{</span><span class="sx">% if </span><span class="o">&lt;</span><span class="err">조건</span><span class="o">&gt;</span> <span class="sx">%}
-    &lt;실행코드&gt;
-{% elif &lt;조건&gt; %}</span>
-    <span class="o">&lt;</span><span class="err">실행코드</span><span class="o">&gt;</span>
-<span class="p">{</span><span class="sx">% else </span><span class="o">%</span><span class="p">}</span>
-    <span class="o">&lt;</span><span class="err">실행코드</span><span class="o">&gt;</span>
-<span class="p">{</span><span class="sx">% endif </span><span class="o">%</span><span class="p">}</span></code></pre></figure>
-
-<p><br></p>
-
-<h1 id="형-변환">형 변환</h1>
-<p>Jinja에서도 형변환이 가능하다. 파이썬 파일에서 데이터를 보낼 때 부득이하게 수정이 불가한 상황등이 있기 때문에 이럴경우 html파일에서 Jinja템플릿문법을 이용하여 형 변환 하여야 한다.<br>
-형변환의 방법은 출력데이터 뒤에 ‘<font color="orange">{ { 데이터 | 변환할자료형 } }</font>‘을 붙이는 것이다.
-<br></p>
-
-<figure class="highlight"><pre><code class="language-ruby" data-lang="ruby"><span class="p">{{</span> <span class="n">number</span><span class="o">|</span><span class="n">int</span> <span class="p">}}</span> </code></pre></figure>
-
-<p><br><br></p>
-
-<h1 id="세-자릿수마다-콤마추가">세 자릿수마다 콤마(,)추가</h1>
-<p>뒤에서부터 <font color="deeppink">세자리 마다 콤마가 찍혀 있는 숫자형식을 포맷팅</font>하기 위해 아래코드가 필요하다.<br>
-실수 또한 소수점 뒷자리 까지 적용된다.</p>
-
-<figure class="highlight"><pre><code class="language-ruby" data-lang="ruby"><span class="p">{{</span><span class="s1">'{:,}'</span><span class="p">.</span><span class="nf">format</span><span class="p">(</span><span class="n">number</span><span class="p">[</span><span class="mi">0</span><span class="p">])}}</span></code></pre></figure>
-
-<p><br><br></p>
-
-<h1 id="공백-제거--공백-유지">공백 제거 / 공백 유지</h1>
-<p>Jinja는 기본적으로 데이터를 출력할 때 포함되어 있는 공백을 무시하지 않고 모두 출력한다.<br>
-따라서 아래 코드를 이용하여 공백을 제거 혹은 유지시킬 수 있다.
-<br></p>
-
-<figure class="highlight"><pre><code class="language-ruby" data-lang="ruby"><span class="p">{</span><span class="sx">%- %}, {%+ %}, {% -%}</span></code></pre></figure>
-
+<p>장고는 30개 정도의 <a href="https://django-doc-test-kor.readthedocs.io/en/old_master/ref/templates/builtins.html#ref-templates-builtins-filters">내장 템플릿 필터</a>를 제공하는데, 자주 사용되는 템플릿 필터를 정리했다.</p>
+<h3 id="default">default</h3>
+<p>변수가 false 또는 비어 있는 경우, 지정된 defalut를 사용한다. </p>
+<pre class=" language-django"><code class=" language-django">{{ value|default:"nothing" }}</code></pre>
+<p><code>value</code>가 제공되지 않았거나 비어 있는 경우, 위에서는 “<code>nothing</code>“을 출력한다.</p>
+<h3 id="length">length</h3>
+<p>값의 길이를 반환한다. 문자열과 목록에 대하여 사용할 수 있다. </p>
+<pre class=" language-django"><code class=" language-django">{{ value|length }}</code></pre>
+<p><code>value</code>가 <code>['a', 'b', 'c', 'd']</code>라면, 결과는 <code>4</code>가 된다.</p>
+<h3 id="upper">upper</h3>
+<p>위의 예제에서 사용한 필터. </p>
+<pre class=" language-django"><code class=" language-django">{{ story.headline|upper }}</code></pre>
+<p>'story.headline'의 값을 대문자 형식으로 변환한다.</p>
+<h2 id="3-템플릿-태그">3. 템플릿 태그</h2>
+<p>HTML 자체는 프로그래밍 로직을 구현할 수 없지만, 템플릿 태그를 사용하면  if문, for문처럼 흐름을 제어할 수 있다.</p>
 <ul>
-  <li>
-    <font color="orange">'+'가 붙은 쪽은 공백을 유지</font>
-    <p>시키고 <font color="orange">'-'가 붙은 쪽은 공백을 제거</font>하는 형식이다.</p>
-  </li>
+<li><code>{% tag %}</code> 와 같이 생겼다.</li>
+<li><code>{% extends %}</code>와 같이 단독으로 사용할 수 있는 템플릿 태그들도 있지만, <code>{% if %}</code> 처럼 뒤에 <code>{% endif %}</code> 템플릿 태그를 <strong>반드시 닫아주어야 하는</strong> 것들도 있다.</li>
 </ul>
-
-<p><br></p>
-
-  
-  </section>
+<p>장고에는 20개가 넘는 템플릿 태그가 내장되어 있다. <a href="https://django-doc-test-kor.readthedocs.io/en/old_master/ref/templates/builtins.html#ref-templates-builtins-tags">내장 태그 레퍼런스</a>에서 읽어볼 수 있다. 자주 사용하는 몇 개만 정리하자면,</p>
+<h3 id="for">for</h3>
+<p>배열의 각 원소에 대하여 루프.</p>
+<pre class=" language-django"><code class=" language-django">&lt;ul&gt;
+{% for student in student_list %}
+    &lt;li&gt;{{ student.name }}&lt;/li&gt;
+{% endfor %}
+&lt;/ul&gt;</code></pre>
+<p><code>student_list</code>에 들어 있는 선수의 목록을 출력하기 위해 위의 예제처럼 사용할 수 있다.</p>
+<h3 id="if--else">if / else</h3>
+<p>변수가 <code>true</code>이면 블록의 컨텐츠를 표시. if 태그 내에 템플릿 필터 및 각종 연산자를 사용할 수 있다.</p>
+<pre class=" language-django"><code class=" language-django">{% if student_list %}
+    총 학생 수 : {{ student_list|length }}
+{% else %}
+    학생이 없어요!
+{% endif %}</code></pre>
+<h3 id="block-및-extentds">block 및 extentds</h3>
+<p>중복되는 html 파일 내용을 반복해서 작성해야하는 번거로움을 줄여준다. 자세한 내용은 <a href="https://django-doc-test-kor.readthedocs.io/en/old_master/topics/templates.html#template-inheritance">템플릿 상속</a> 참조. </p>
+<h2 id="4-템플릿-코멘트">4. 템플릿 코멘트</h2>
+<p>HTML 문서 상에서 주석이 필요할 때 사용한다.</p>
+<p>장고에서는 두 가지 형식의 코멘트 형식을 제공한다.</p>
+<h4 id="한-줄">한 줄</h4>
+<pre class=" language-django"><code class=" language-django">{# 주석 내용 #} </code></pre>
+<p> 개행 허용되지 않음.</p>
+<h4 id="여러-줄">여러 줄</h4>
+<pre class=" language-django"><code class=" language-django">{% comment %}
+주석 내용
+{% endcomment %}</code></pre>
+<h2 id="5-참고">5. 참고</h2>
+<p><a href="https://django-doc-test-kor.readthedocs.io/en/old_master/topics/templates.html#template-inheritance">Django 템플릿 언어 (공식 한글문서)</a></p></div></div></div>
 {% endverbatim  %}
 {% endblock %}
