--- a/day04/ex03/templates/color.html
+++ b/day04/ex03/templates/color.html
@@ -6,26 +6,28 @@
 
 {% block style %}
   <style>
-    th, td, tr{
-      height: 40px,
-      width: 80px,
+    th, tr, td {
+      height: 40px;
+      width: 80px;
     }
   </style>
 {% endblock %}
 
 {% block content %}
-  <table>
-    <th>noir</th>
-    <th>rough</th>
-    <th>bleu</th>
-    <th>vert</th>
-      {% for table_line in table %}
-        <tr>
-          <td background-color: {{noir}}> </td>
-          <td background-color: {{rough}}> </td>
-          <td background-color: {{bleu}}> </td>
-          <td background-color: {{vert}}> </td>
-        </tr>
-      {% endfor %}
+  <table >
+    <tr>
+      <th>noir</th>
+      <th>rouge</th>
+      <th>bleu</th>
+      <th>vert</th>
+    </tr>
+    {% for i in table %}
+    <tr>
+      <td style="background-color: rgb({{i}}, {{i}}, {{i}})"> </td>
+      <td style="background-color: rgb({{i}}, 0, 0)"> </td>
+      <td style="background-color: rgb(0, 0, {{i}})"> </td>
+      <td style="background-color: rgb(0, {{i}}, 0)"> </td>
+    </tr>
+    {% endfor %}
   </table>
 {% endblock %}
