--- a/day04/ex02/static/style.css
+++ b/day04/ex02/static/style.css
@@ -11662,7 +11662,7 @@ body.is-preload .gallery.onload-fade-in article .image img {
 
 .wrapper.style2 {
   padding: 7rem;
-  background-color: #eeeeee;
+  background-color: #c6d5c9c6;
 }
 
 .wrapper.style2 > .inner {
