day05_ex04_form_doing

--- a/rush00_last/hospark/r00/moviemon_hospark/moviemon/templates/pages/Save.html
+++ b/rush00_last/hospark/r00/moviemon_hospark/moviemon/templates/pages/Save.html
@@ -36,7 +36,7 @@
         </h2></td>
     </tr>
     <tr>
-        <td class><h4>[A]&nbsp&nbsp:&nbsp&nbspSave&nbsp&nbsp   <br>[B]&nbsp&nbsp:&nbsp&nbspCancle</h4></td>
+        <td class><h4>[A]&nbsp&nbsp:&nbsp&nbspSave&nbsp&nbsp   <br>[B]&nbsp&nbsp:&nbsp&nbspCancel</h4></td>
     </tr>
 </table>
 
