--- a/rush00_last/hospark/r00/moviemon_hospark/moviemon/templates/pages/Load.html
+++ b/rush00_last/hospark/r00/moviemon_hospark/moviemon/templates/pages/Load.html
@@ -38,9 +38,9 @@
     <tr>
         <td class><h4>
             {% if load == "load" %}
-                [A]&nbsp&nbsp:&nbsp&nbspStart<br>[B]&nbsp&nbsp:&nbsp&nbspCancle
+                [A]&nbsp&nbsp:&nbsp&nbspStart<br>[B]&nbsp&nbsp:&nbsp&nbspCancel
             {% else %}
-                [A]&nbsp&nbsp:&nbsp&nbspLoad<br>[B]&nbsp&nbsp:&nbsp&nbspCancle
+                [A]&nbsp&nbsp:&nbsp&nbspLoad<br>[B]&nbsp&nbsp:&nbsp&nbspCancel
             {% endif%}
     </tr>
 
