--- a/rush01/ex/templates/nav.html
+++ b/rush01/ex/templates/nav.html
@@ -16,6 +16,9 @@
           {% if user.is_authenticated %}
           <li><a href="{% url 'profile' %}"> edit Profile </a></li>
           {% endif %}
+          {% if user.is_superuser %}
+          <li><a href="{% url 'admin' %}"> edit administrations </a></li>
+          {% endif %}
           <li class="dropdown">
             <a
               href="#"
